# rustbook-log-collector

./: .gitignore  README.md
api/: Cargo.toml
api/src/: lib.rs
server/: Cargo.toml
server/migrations/2023-08-06-055629_create_logs/: up.sql
server/src/: db.rs  handlers.rs  main.rs  model.rs  schema.rs
