[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
log = "0.4"
env_logger = "0.9"
api = {path = "../api"}
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15.0"
